--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,10 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+# development
+_backups
+_draft
+NOTES.md
+
 # dependencies
 /node_modules
 /.pnp
@@ -10,8 +15,11 @@
 
 # production
 /build
+/.next
 
 # misc
+__snapshots__
+social-preview.jpg
 .DS_Store
 .env.local
 .env.development.local
